public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

html, body {
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
    height: 100%;
    min-height: 100dvh;
    margin: 0;
    overflow: hidden;
    background-color: #111;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

#app {
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    background-color: #111;
    flex-direction: column;
    display: flex;
}

#header {
    width: 100%;
    height: 48px;
    display: flex;
    padding-top: env(safe-area-inset-top);
    background-color: #222;
    filter: drop-shadow(0px 10px 15px #111);
    z-index: 10;
}

#header > * {
    min-width: 0;
}

#main {
    flex: 1;
    height: auto;
    display: flex;
    overflow: hidden;
}

.content-left, .content-right {
    flex: 1;
    min-width: 0;
    height: 100%;
    display: flex;
}

.content-center {
    min-width: 0;
    max-width: 650px;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    -ms-overflow-style: none;
    overscroll-behavior: contain;
    scrollbar-width: none;
    background-color: #111;
    padding-bottom: env(safe-area-inset-bottom);
}

.header-left, .header-right {
    padding: 0 0.5rem;
    flex: 1;
    min-width: 0;
    display: flex;
    align-items: center
}

.header-right-button-wrapper {
    margin-left: auto;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 0.5rem;
}

.header-center {
    width: 100%;
    max-width: 650px;
    min-width: 0;
    display: flex;
    align-items: center;
}

.search-wrapper {
    padding: 0.4rem 0;
    display: flex;
    width: 100%;
}

#search-bar {
    width: 100%;
    display: flex;
    background-color: #333;
    border-radius: 0.5rem;
    align-items: center;
    padding: 0.25rem 0;
}

::placeholder {
    color: #999;
    opacity: 1;
}

#search {
    width: 100%;
    border: none;
    font-family: Inter, sans-serif;
    font-size: 1rem;
    color: #fff;
    background-color: #00000000;
    justify-self: center;
    border-radius: 0 0.5rem 0.5rem 0;
}

#search:focus {
    outline: none;
}

#search-icon {
    width: 1rem;
    height: 1rem;
    margin: auto 10px;
    color: #999;
}

.post {
    margin: 20px 0 0 0;
    width: 100%;
    max-width: 650px;
    height: auto;
    display: flex;
    flex-direction: column;
    background-color: #222;
    border-radius: 0.5rem;
}

.comment {
    width: 100%;
}

.post-header, .comment-header, .reply-draft-header {
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: row;
    padding: 0 1rem;
    align-items: center;
}

.post-header {
    padding: 1rem 1rem 0 1rem;
}

.post-content, .comment-content, .reply-draft-content {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    padding: 0.75rem 1rem;
}

.reply-draft-footer {
    height: auto;
    display: flex;
    padding: 0 1rem 1rem 1rem;
    align-items: center;
    width: 100%;
}

.post-details, .comment-details, .draft-details {
    margin: 0 0 0 0.75rem;
    display: flex;
    flex-direction: column;
}

.username {
    font-family: Inter, sans-serif;
    font-size: 1rem;
    color: #fff;
}

.timestamp {
    font-family: Inter, sans-serif;
    font-size: 0.9rem;
    color: #999;
}

.profile-picture {
    border-radius: 50%;
    user-select: none;
    width: 48px;
    height: 48px;
}

.text {
    font-family: Inter, sans-serif;
    font-size: 1rem;
    line-height: 1.5;
    color: #ddd;
}

.comment-btn, .like-btn, .share-btn, .attachment-btn, .post-btn, #login-btn, #post-btn, .login-submit-btn, .register-btn, #logo {
    background-color: #333;
    padding: 0.4rem 0.5rem;
    border-radius: 0.5rem;
    display: flex;
    color: #ddd;
    font-family: Inter, sans-serif;
    font-size: 1rem;
    user-select: none;
    align-items: center;
}

#login-btn, #post-btn, #logo {
    font-size: 1.1rem;
    text-decoration: none;
}

.shares, .likes, .comments {
    font-size: 0.9rem;
}

.attachment-text, .post-text {
    font-size: 0.9rem;
}

.comment-icon, .like-icon, .share-icon, .attachment-icon, .post-icon, #login-icon, #logo-icon, #post-icon {
    color: #ddd;
    margin: 0 0.5rem 0 0;
}

.like-icon, .comment-icon, .share-icon {
    transition:
            transform 0.15s ease,
            color 0.15s ease,
            opacity 0.15s ease;
}

.comment-btn:hover, .like-btn:hover, .share-btn:hover, .attachment-btn:hover, #login-btn:hover, #post-btn:hover {
    background-color: #444;
    cursor: pointer;
}

::-webkit-scrollbar {
    display: none;
}

.highlighted-reply, .compose-reply {
    background-color: #222;
    height: auto;
    display: flex;
    border-radius: 0.5rem;
    width: 100%;
}

.reply-bar {
    width: 4px;
    height: auto;
    background-color: #444;
    margin: 1rem 0 1rem 1rem;
    border-radius: 0.5rem;
}

.image {
    padding: 1rem 0 0 0;
    width: 100%;
    height: auto;
    align-items: center;
}

.image img {
    width: 100%;
    height: auto;
    border-radius: 0.5rem;
}

textarea {
    resize: none;
    background-color: #00000000;
    border: hidden;
    outline: none;
}

.reply-text-input {
    color: #ddd;
    font-size: 1rem;
    line-height: 1.5;
    font-family: Inter, sans-serif;
}

.post-text, #post-icon {
    color: #fff;
}

.post-btn {
    background-color: #226ebf;
    margin-right: 8px;
}

.post-btn:hover {
    background-color: #2c8df5;
    cursor: pointer;
}

.reply-draft {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.character-count {
    font-size: 0.9rem;
    display: flex;
    font-family: Inter, sans-serif;
    color: #bbb;
    margin-left: auto;
}

#logo {
    opacity: 1;
    transition: opacity 0.07s ease-in-out;
    white-space: nowrap;
}

.comment-btn, .like-btn, .share-btn {
    margin-right: 0.5rem;
}
/* ... */

